--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,7 +6,7 @@
 .banner-img {
   width: 100%;
   mask-image: linear-gradient(to right, transparent, black 75%);
-  -weblit-mask-image: linear-gradient(to right, transparent, black 75%);
+  -webkit-mask-image: linear-gradient(to right, transparent, black 75%);
 }
 
 .hero-caption {
@@ -49,4 +49,10 @@
 .hero-btns .btn.dark-btn {
   color: #fff;
   background: #6d6d6eb3;
+}
+.hero-btns .btn:hover {
+  background: #ffffffbf;
+}
+.hero-btns .btn.dark-btn:hover {
+  background: #6d6d6e66;
 }
